tests/0037.wgsl.snap
error: Expected expression, found 'for'.

   for (var i: i32 = 0; i < 2 ; i++) {
   ~~~
error: Expected statement, found 'for'.

   for (var i: i32 = 0; i < 2 ; i++) {
   ~~~
